--- a/cover/index.html
+++ b/cover/index.html
@@ -51,7 +51,7 @@
 
           <div class="inner cover">
             <h1 class="cover-heading">Cover your page.</h1>
-              <img src="smiley.gif" alt="Smiley face" height="42" width="42"> 
+              <img src="creativecodingportfolio/images/websymbol.png" alt="me" height="300" width="300"> 
             <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
             <p class="lead">
               <a href="#" class="btn btn-lg btn-default">Learn more</a>
