--- a/cover/features.html
+++ b/cover/features.html
@@ -22,7 +22,7 @@
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-
+      <script src="processing-1.0.0.min.js"></script>
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -42,7 +42,7 @@
             <div class="inner">
               <h3 class="masthead-brand">Jason Jellyfish</h3>
               <ul class="nav masthead-nav">
-                <li class="active"><a href="features.html">Home</a></li>
+                <li class="active"><a href="#">Home</a></li>
                 <li><a href="#">Features</a></li>
                 <li><a href="#">Contact</a></li>
               </ul>
@@ -51,7 +51,9 @@
 
           <div class="inner cover">
             <h1 class="cover-heading">orange</h1>
-              <img src="images/websymbol.png" alt="me" height="300" width="300"> 
+              
+ <canvas data-processing-sources="linez.pde"></canvas>
+
             <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
             <p class="lead">
               <a href="#" class="btn btn-lg btn-default">Learn more</a>
