--- a/cover/features.html
+++ b/cover/features.html
@@ -53,7 +53,7 @@
           <div class="inner cover">
             <h1 class="cover-heading">orange</h1>
               
- <canvas data-processing-sources="linez.pde"></canvas>
+ <canvas data-processing-sources="linez/linez.pde"></canvas>
 
             <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
             <p class="lead">
