--- a/cover/features.html
+++ b/cover/features.html
@@ -51,14 +51,14 @@
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">orange</h1>
+           <!-- <h1 class="cover-heading">orange</h1> -->
               
  <canvas data-processing-sources="linez/linez.pde"></canvas>
 
-            <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+            <!--<p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
             <p class="lead">
               <a href="#" class="btn btn-lg btn-default">Learn more</a>
-            </p>
+            </p>-->
           </div>
 
           <div class="mastfoot">
