--- a/cover/features.html
+++ b/cover/features.html
@@ -43,9 +43,9 @@
             <div class="inner">
               <h3 class="masthead-brand">Jason Jellyfish</h3>
               <ul class="nav masthead-nav">
-                <li class="active"><a href="#">Home</a></li>
+                <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="#">Features</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="http://www.overzero.org">Contact</a></li>
               </ul>
             </div>
           </div>
