--- a/cover/index.html
+++ b/cover/index.html
@@ -15,6 +15,7 @@
 
     <!-- Custom styles for this template -->
     <link href="cover.css" rel="stylesheet">
+      <link href="home.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -31,6 +32,7 @@
   </head>
 
   <body>
+      
 
     <div class="site-wrapper">
 
@@ -42,9 +44,9 @@
             <div class="inner">
               <h3 class="masthead-brand">Jason Jellyfish</h3>
               <ul class="nav masthead-nav">
-                <li class="active"><a href="features.html">Home</a></li>
-                <li><a href="#">Features</a></li>
-                <li><a href="#">Contact</a></li>
+                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="features.html">Features</a></li>
+                <li><a href="http://www.overzero.org">Contact</a></li>
               </ul>
             </div>
           </div>
