--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <![endif]-->
   </head>
   <body>
+      <div class="shadow"></div>
         <!-- Split button -->
     <div class="btn-group">
       <button type="button" class="btn btn-danger">Action</button>
