--- a/cover/index.html
+++ b/cover/index.html
@@ -33,6 +33,7 @@
 
   <body>
       
+      <div class="shadow"></div>
 
     <div class="site-wrapper">
 
@@ -54,7 +55,7 @@
           <div class="inner cover">
             <h1 class="cover-heading">orange</h1>
               <img src="images/websymbol.png" alt="me" height="300" width="300"> 
-            <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+            <p class="lead">Believe In Orange.</p>
             <p class="lead">
               <a href="#" class="btn btn-lg btn-default">Learn more</a>
             </p>
