--- a/cover/features.html
+++ b/cover/features.html
@@ -32,7 +32,7 @@
   </head>
 
   <body>
-
+ <div class="shadow"></div>
   <center>  <canvas data-processing-sources="linez/linez.pde"></canvas> </center>
 
     <div class="site-wrapper">
