--- a/cover/features.html
+++ b/cover/features.html
@@ -33,7 +33,7 @@
 
   <body>
  <div class="shadow"></div>
-  <center>  <canvas data-processing-sources="linez/linez.pde"></canvas> </center>
+  <center>  <canvas data-processing-sources="linezfresh1/linezfresh1.pde"></canvas> </center>
 
     <div class="site-wrapper">
 
