--- a/cover/features.html
+++ b/cover/features.html
@@ -33,7 +33,28 @@
 
   <body>
  <div class="shadow"></div>
-  <center>  <canvas data-processing-sources="linezfresh1/linezfresh1.pde"></canvas> </center>
+
+
+  <div>
+    <canvas id="linezfresh1" data-processing-sources="linezfresh1.pde"
+        width="1000" height="1000">
+      <p>Your browser does not support the canvas tag.</p>
+      <!-- Note: you can put any alternative content here. -->
+    </canvas>
+    <noscript>
+      <p>JavaScript is required to view the contents of this page.</p>
+    </noscript>
+    </div>
+  <h1>linezfresh1</h1>
+    <p id="description"></p>
+  <p id="sources">Source code: <a href="linezfresh1.pde">linezfresh1</a> </p>
+  <p>
+  Built with <a href="http://processing.org" title="Processing">Processing</a>
+  and <a href="http://processingjs.org" title="Processing.js">Processing.js</a>
+  </p>
+</div>
+
+
 
     <div class="site-wrapper">
 
